--- a/styles/index.css
+++ b/styles/index.css
@@ -214,6 +214,117 @@
   font-weight: 400;
 }
 
+.section-1-container {
+  width: 100%;
+  height: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(/images/Houses.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.section-1-container .section-content {
+  max-width: 650px;
+  width: 100%;
+  min-height: 230px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.section-1-container .big-text {
+  max-width: 288px;
+  width: 100%;
+  min-height: 30px;
+  color: white;
+  font-family: "Aleo", serif;
+  font-size: 36px;
+  line-height: 26px;
+  font-weight: 400;
+  margin-bottom: 7%;
+  margin-top: 10%;
+}
+.section-1-container .small-text {
+  max-width: 560px;
+  width: 100%;
+  min-height: 160px;
+  color: white;
+  font-size: 16px;
+  font-family: "Josefin Sans", sans-serif;
+  line-height: 26px;
+  letter-spacing: 2px;
+  font-weight: 100;
+}
+.section-1-container .explorebtn {
+  width: 228px;
+  height: 63px;
+  color: white;
+  background-color: rgb(0, 137, 250);
+  font-family: "Aleo", serif;
+  font-weight: 400;
+  line-height: 26px;
+  font-size: 14px;
+  letter-spacing: 2px;
+  border: none;
+  border-radius: 6px;
+  margin-top: 7%;
+}
+.section-1-container .explorebtn:hover {
+  background-color: rgba(0, 17, 255, 0.452);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
+.pic-container {
+  max-width: 550px;
+  width: 100%;
+  min-height: 460px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.pic-container .pic-house {
+  max-width: 350px;
+  width: 100%;
+  min-height: 220px;
+  -webkit-transform: translateX(-50px);
+          transform: translateX(-50px);
+  margin-bottom: 2%;
+}
+.pic-container .pic-mountain-small {
+  max-width: 350px;
+  width: 100%;
+  min-height: 220px;
+  -webkit-transform: translateX(50px);
+          transform: translateX(50px);
+}
+
 * {
   margin: 0;
   padding: 0;
