--- a/styles/index.css
+++ b/styles/index.css
@@ -325,6 +325,81 @@
           transform: translateX(50px);
 }
 
+.section-2-container {
+  width: 100%;
+  height: 350px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #333333;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  position: relative;
+}
+.section-2-container .section-2-content {
+  max-width: 700px;
+  width: 100%;
+  min-height: 190px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.fa-magnifying-glass {
+  color: #5474FD;
+  font-size: 50px;
+}
+
+.fa-circle-check {
+  color: #FF6363;
+  font-size: 50px;
+}
+
+.fa-thumbs-up {
+  color: #00A2FF;
+  font-size: 50px;
+}
+
+.small-text-2 {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  font-family: "Aleo", serif;
+  line-height: 26px;
+  font-size: 36px;
+  color: white;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  max-width: 880px;
+  width: 100%;
+}
+
+.img-bow {
+  max-width: 600px;
+  width: 100%;
+  position: absolute;
+  top: 20%;
+}
+
 * {
   margin: 0;
   padding: 0;
