--- a/styles/index.css
+++ b/styles/index.css
@@ -497,6 +497,102 @@
   transition: 0.5s ease-in-out;
 }
 
+.section-4-container {
+  width: 100%;
+  height: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(/images/Mountain-and-water.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+.section-4-container .content-right {
+  width: 50%;
+  height: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-top: 7%;
+}
+.section-4-container .box-text-right {
+  max-width: 550px;
+  width: 100%;
+  min-height: 375px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: rgba(35, 35, 35, 0.9176470588);
+  padding: 25px;
+}
+
+.spain-1 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  color: #e8e8e8;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.madrid-1 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  line-height: 26px;
+  color: #E8E8E8;
+  font-weight: 400;
+  margin-bottom: 15px;
+}
+
+.info-text-spain-1 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 16px;
+  line-height: 26px;
+  color: #e8e8e8;
+  font-weight: 100;
+}
+
+.book-now-1-btn {
+  width: 200px;
+  height: 50px;
+  margin-top: 10%;
+  color: white;
+  background-color: rgb(0, 137, 250);
+  font-family: "Aleo", serif;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 1.2px;
+  border: none;
+}
+
+.book-now-1-btn:hover {
+  background-color: rgba(0, 17, 255, 0.452);
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
+}
+
 * {
   margin: 0;
   padding: 0;
