--- a/styles/index.css
+++ b/styles/index.css
@@ -593,6 +593,84 @@
   transition: 0.5s ease-in-out;
 }
 
+.section-5-container {
+  width: 100%;
+  height: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-image: url(/images/guy-on-rocks.png);
+  background-size: cover;
+  background-repeat: no-repeat;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+}
+.section-5-container .grid-container {
+  max-width: 1110px;
+  width: 100%;
+  min-height: 300px;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: 1fr 1fr;
+  grid-template-columns: 1fr 1fr;
+}
+.section-5-container .tourist-say {
+  font-family: "Aleo", serif;
+  font-size: 36px;
+  line-height: 26px;
+  color: white;
+  font-weight: 400;
+  margin-bottom: 7%;
+}
+
+.man-on-mountain {
+  background-image: url(/images/guy-on-mountain.png);
+  background-size: cover;
+}
+
+.sam-sumon {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 20px;
+  font-weight: 400;
+  color: white;
+  margin-bottom: 15px;
+}
+
+.text-info-5 {
+  font-family: "Josefin Sans", sans-serif;
+  font-size: 15px;
+  font-weight: 400;
+  color: white;
+  line-height: 20px;
+  width: 700px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  background-color: #232323;
+  padding: 7%;
+}
+
+.fa-quote-left {
+  color: rgb(0, 137, 250);
+  font-size: 25px;
+  margin-right: 7px;
+}
+
 * {
   margin: 0;
   padding: 0;
